<resources>
    <string name="app_name">秀儿</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_flash_sale">FlashSaleActivity</string>
    <string name="title_activity_prod_detail">ProdDetailActivity</string>
    <string name="title_activity_shop_detail">ShopDetailActivity</string>
    <string name="title_activity_shop_list">ShopListActivity</string>
    <string name="title_activity_activ_detail">ActivDetailActivity</string>
    <string name="title_activity_article_detail">ArticleDetailActivity</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="title_activity_order_list">OrderListActivity</string>
    <string name="title_activity_club_card">ClubCardActivity</string>
    <string name="title_activity_point">PointActivity</string>
    <string name="title_activity_coupon_list">CouponListActivity</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_my_article">MyArticleActivity</string>
    <string name="title_activity_find_shop_list">FindShopListActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_prod_classification">ProdClassificationActivity</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_retrieve_pwd">RetrievePwdActivity</string>
    <string name="title_activity_comment_list">CommentListActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_edit_shop">EditShopActivity</string>
    <string name="title_activity_poi_map">PoiMapActivity</string>
    <string name="title_activity_search_poi">SearchPOIActivity</string>
    <string name="title_activity_shop_nav">ShopNavActivity</string>
    <string name="title_activity_perfect_personal_info">PerfectPersonalInfoActivity</string>
    <string name="title_activity_shop_coupon_list">ShopCouponListActivity</string>
    <string name="title_activity_shop_activ_list">ShopActivListActivity</string>
    <string name="title_activity_album_catalog">AlbumCatalogActivity</string>
    <string name="title_activity_image_pager">ImagePagerActivity</string>
    <string name="title_activity_city_list">CityListActivity</string>
    <string name="title_activity_search_city">SearchCityActivity</string>
    <string name="title_activity_search_shop">SearchShopActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_activ_type">ActivTypeActivity</string>
    <string name="title_activity_add_article">AddArticleActivity</string>
    <string name="title_activity_search_article">SearchArticleActivity</string>
    <string name="title_activity_article_comment_list">ArticleCommentListActivity</string>
    <string name="title_activity_search_card">SearchCardActivity</string>
    <string name="title_activity_card_detail">CardDetailActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_point_detail">PointDetailActivity</string>
    <string name="title_activity_modify_user_info">ModifyUserInfoActivity</string>
    <string name="title_activity_bind_mobile">BindMobileActivity</string>
    <string name="title_activity_addr_manage">AddrManageActivity</string>
    <string name="title_activity_addr_edit">AddrEditActivity</string>
    <string name="title_activity_area_list">AreaListActivity</string>
    <string name="title_activity_withdraw">WithdrawActivity</string>
    <string name="title_activity_withdraw_result">WithdrawResultActivity</string>
    <string name="title_activity_recharge">RechargeActivity</string>
    <string name="title_activity_shop_info">ShopInfoActivity</string>
    <string name="title_activity_submit_order">SubmitOrderActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="title_activity_comment_order">CommentOrderActivity</string>
    <string name="title_activity_order_status">OrderStatusActivity</string>
    <string name="title_activity_shop_flash_pay">ShopFlashPayActivity</string>
    <string name="title_activity_search_prod">SearchProdActivity</string>
    <string name="title_activity_web_load">WebLoadActivity</string>
    <string name="title_activity_sys_msg_list">SysMsgListActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="title_activity_bind">BindActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_modify_pay_pwd">ModifyPayPwdActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_vcode">VCodeActivity</string>
    <string name="title_activity_activ_list">ActivListActivity</string>
    <string name="title_activity_circle_detail">CircleDetailActivity</string>
    <string name="title_activity_circle_my">CircleMyActivity</string>
    <string name="title_activity_circle_edit">CircleEditActivity</string>
    <string name="title_activity_wallet_detail">WalletDetailActivity</string>
    <string name="title_activity_filial">FilialActivity</string>
    <string name="title_activity_IncentivePoints">IncentivePointsActivity</string>
    <string name="title_activity_Consumption">ConsumptionActivity</string>
        <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
<string name="exchangestr">
\n
1.单笔最多可兑换50000秀点；\n
2.到账时间分为T+1；\n
3.兑换的到账时间为一个工作日到账（T+1），手续费固定每笔5秀点。\n
</string>
<string name="sharestr"> 
规则说明:\n
&#160;&#160;&#160;&#160;凡是通过下方分享按钮推荐身边亲朋好友下秀儿消费app的用户,新用户在注册的时候输入推荐人的手机号,推荐人即可获得秀点奖励,秀点可提现哦.
</string>
    <string name="title_activity_settings">Settings</string>
    <string name="blink">BLINK</string>
    <string name="nod">NOD</string>
    <string name="mouth">MOUTH</string>
    <string name="yaw">YAW</string>
    <string name="sound_notice">提示声音</string>
    <string name="set_detect_list">动作序列</string>
    <string name="set_output_type">选图方案</string>
    <string name="set_complexity">难易程度</string>
    <string name="default_detect_list">BLINK MOUTH NOD YAW</string>
    <string name="start_detect">开始检测</string>
    <string name="done">完成</string>
    <string name="liveness_detect">活体测试</string>
    <string name="zhang">张</string>
    <string name="max_action">最多可设置10个动作</string>
    <string name="settings">设置</string>
    <string name="pref_title_complexity">难易程度</string>
	<string name="pass_liveness">通过活体检测</string>
    <string name="cancel_liveness">活体检测被取消</string>
    <string name="failed_init_sdk">算法SDK初始化失败:可能是模型路径错误,SDK权限过期,包名绑定错误,没有相机权限</string>
	<string name="camera_refuse">调用摄像头权限被拒绝，不能启动活体检测。</string>
	<string name="write_external_storage_refuse">访问存储空间权限被拒绝，不能启动活体检测。</string>
	<string name="save_liveness_result_fail">访问存储空间权限被拒绝，保存活体检测结果失败。</string>
    <string name="first_action">第一个动作必须为BLINK</string>
    <string name="stlivenesslibrary">STLivenessLibrary</string>
    <string-array name="pref_complexity_titles">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Hell</item>
    </string-array>
    <string-array name="pref_complexity_values">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Hell</item>
    </string-array>
    <string name="pref_title_outputtype">选图方案</string>
    <string-array name="pref_outputtype_titles">
        <item>单图</item>
        <item>多图</item>
    </string-array>
    <string-array name="pref_outputtype_values">
        <item>singleImg</item>
        <item>multiImg</item>
    </string-array>
    <string name="default_complexity_value">Normal</string>
    <string name="default_outputtype_value">multiImg</string>
</resources>