<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.MainActivity" >

    <include layout="@layout/content_main" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center" >

        <LinearLayout
            android:id="@+id/settingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/setDetectList"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/white"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="15dp"
                    android:text="@string/set_detect_list"
                    android:textColor="@color/background_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/detectListText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="8"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_detect_list"
                    android:textColor="@color/background_color"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settingLayout"
            android:orientation="vertical"
            android:paddingTop="20dp" >

            <Button
                android:id="@+id/test"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:text="@string/start_detect"
                android:textColor="@color/background_color"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/versionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>